# shame-app

./: .gitignore  main.py  pyproject.toml
shame/: app.py  database.py  main.py  models.py  repository.py  route.py  schemas.py
shame/auth/: dependencies.py  models.py  repository.py  route.py  schemas.py  utils.py
shame/config/: auth.py  settings.py
tests/: test_auth_api.py  test_auth_repo.py  test_db_operations.py  test_shamestory_api.py  test_shamestory_repo.py
